# nlScript-python

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
nlScript/: autocompleter.py  evaluator.py  parsednode.py  parseexception.py
nlScript/core/: defaultparsednode.py  lexer.py  named.py  nonterminal.py  parsednodefactory.py  parsingstate.py  production.py  rdparser.py  symbol.py
nlScript/ebnf/: ebnfcore.py  ebnfparsednodefactory.py  namedrule.py  optional.py  orrule.py  plus.py  rule.py  sequence.py  star.py
nlScript/microscope/: languagecontrol.py
nlScript/test/: testautocompletion.py  testcharacterset.py  testcolor.py  testdate.py  testdatetime.py  testinteger.py  testletter.py  testmonth.py  testor.py  testpath.py  testplus.py
nlScript/ui/: test.py  test2.py  test3.py  test5.py  test6.py  test7.py
nlScript/util/: randomstring.py
nls/: autocompleter.py  evaluator.py  parsednode.py  parseexception.py  parser.py
nls/core/: autocompletion.py  bnf.py  defaultparsednode.py  graphviz.py  matcher.py  named.py  nonterminal.py  parsednodefactory.py  production.py  rdparser.py  representssymbol.py  symbol.py  terminal.py
nls/ebnf/: ebnf.py  ebnfcore.py  ebnfparsednodefactory.py  ebnfparser.py  ebnfproduction.py  join.py  namedrule.py  optional.py  orrule.py  parselistener.py  plus.py  repeat.py  rule.py  sequence.py  star.py
nls/microscope/: languagecontrol.py  main.py  microscope.py  timeline.py
nls/test/: testautocompletion.py  testcharacterset.py  testcolor.py  testdate.py  testdatetime.py  testdigit.py  testhighlevelparser.py  testinteger.py  testor.py  (+10 more)
(+55 files in other folders)
